--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,12 @@
 {
-  "files.autoSave": "onFocusChange",
-  "eslint.format.enable": true,
-  "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "search.exclude": {
-    "**/.yarn": true,
-    "**/.pnp.*": true,
-    ".bob": true,
-    "**/.next": true,
-    "**/node_modules": true,
-    "**/dist": true
-  },
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "search.useGlobalIgnoreFiles": true,
+  "prettier.prettierPath": "./node_modules/prettier",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "files.exclude": {
-    "**/.git": true,
-    "**/.DS_Store": true,
-    "test-lib": true,
-    "lib": true,
-    "coverage": true,
-    "npm": true
-  },
-  "deno.enable": true,
   "deno.enablePaths": [
     "examples/deno",
     "examples/netlify-edge/netlify/edge-functions"
   ],
-  "deno.unstable": true,
   "deno.importMap": "examples/netlify-edge/.netlify/edge-functions-import-map.json"
 }
