Fix tests and use btoa from ponyfill for Node 14

--- a/packages/plugins/apollo-inline-trace/package.json
+++ b/packages/plugins/apollo-inline-trace/package.json
@@ -41,7 +41,8 @@
     "access": "public"
   },
   "peerDependencies": {
-    "graphql-yoga": "^3.0.0"
+    "graphql-yoga": "^3.0.0",
+    "@whatwg-node/fetch": "^0.3.2"
   },
   "dependencies": {
     "apollo-reporting-protobuf": "^3.3.2"
