--- a/website/package.json
+++ b/website/package.json
@@ -32,7 +32,7 @@
     "@graphql-inspector/core": "latest",
     "@graphql-inspector/github": "latest",
     "@monaco-editor/react": "4.3.1",
-    "@theguild/components": "2.0.5",
+    "@theguild/components": "2.1.0-alpha-20220818233926-7ce4562",
     "guild-docs": "3.1.2",
     "next": "12.2.5",
     "react": "18.2.0",
