--- a/website/package.json
+++ b/website/package.json
@@ -28,12 +28,12 @@
     "@graphql-yoga/node": "2.13.9",
     "@graphql-yoga/render-graphiql": "2.13.8",
     "graphql": "16.5.0",
-    "next-sitemap": "^3.1.17",
+    "next-sitemap": "^3.1.21",
     "@graphql-inspector/core": "latest",
     "@graphql-inspector/github": "latest",
     "@monaco-editor/react": "4.3.1",
-    "@theguild/components": "2.1.0-alpha-20220818233926-7ce4562",
-    "guild-docs": "3.1.2",
+    "@theguild/components": "3.0.0",
+    "guild-docs": "4.0.0-alpha-20220823140452-e83c135",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
