--- a/website/package.json
+++ b/website/package.json
@@ -33,7 +33,7 @@
     "@graphql-inspector/github": "latest",
     "@monaco-editor/react": "4.3.1",
     "@theguild/components": "3.0.0",
-    "guild-docs": "4.0.0-alpha-20220823140452-e83c135",
+    "guild-docs": "4.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
