--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -15,14 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/pages/docs/[[...slug]].tsx.old",
-    "src/pages/tutorial/[[...slug]].tsx.old",
-    "src/pages/v3/tutorial/[[...slug]].tsx.old",
-    "src/pages/v3/docs/[[...slug]].tsx.old"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
