--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -55,9 +55,10 @@
   "dependencies": {
     "@graphql-tools/code-file-loader": "^7.3.0",
     "@graphql-tools/mock": "^8.7.0",
-    "@envelop/core": "^2.4.1",
-    "@envelop/parser-cache": "^4.4.0",
-    "@envelop/validation-cache": "^4.4.0",
+    "@envelop/core": "2.5.1-alpha-20220824191550-ddf94e22",
+    "@envelop/types": "2.3.2-alpha-20220824191550-ddf94e22",
+    "@envelop/parser-cache": "4.6.1-alpha-20220824191550-ddf94e22",
+    "@envelop/validation-cache": "4.6.1-alpha-20220824191550-ddf94e22",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-tools/utils": "^8.8.0",
@@ -72,8 +73,8 @@
   "devDependencies": {
     "@types/node": "16.11.56",
     "html-minifier-terser": "7.0.0",
-    "@envelop/disable-introspection": "^3.4.0",
-    "@envelop/live-query": "^4.0.0",
+    "@envelop/disable-introspection": "3.5.1-alpha-20220824191550-ddf94e22",
+    "@envelop/live-query": "4.1.1-alpha-20220824191550-ddf94e22",
     "@types/eventsource": "1.1.9",
     "eventsource": "2.0.2",
     "graphql": "^16.0.1",
