Improve Deno docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "graphql-yoga-monorepo",
   "private": true,
+  "type": "module",
   "scripts": {
     "prebuild": "rimraf packages/*/dist",
     "check": "yarn workspaces run check",
