--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -8,7 +8,7 @@
     "check": "exit 0"
   },
   "dependencies": {
-    "@graphql-yoga/node": "2.13.11",
+    "graphql-yoga": "2.13.11",
     "graphql": "16.6.0"
   }
 }
