--- a/examples/graphql-armor/package.json
+++ b/examples/graphql-armor/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@escape.tech/graphql-armor": "1.0.10",
-    "@graphql-yoga/node": "2.13.11",
+    "graphql-yoga": "2.13.11",
     "graphql": "16.6.0"
   }
 }
