--- a/examples/apollo-federation/service/package.json
+++ b/examples/apollo-federation/service/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@apollo/subgraph": "^0.5.0",
-    "@graphql-yoga/node": "2.13.11",
+    "graphql-yoga": "2.13.11",
     "graphql": "^16.2.0"
   }
 }
