--- a/examples/aws-lambda/lambda/package.json
+++ b/examples/aws-lambda/lambda/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@graphql-yoga/node": "2.13.11",
+    "graphql-yoga": "2.13.11",
     "@vendia/serverless-express": "4.10.1",
     "graphql": "^16.3.0"
   }
