integrate graphql-http tests

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -78,6 +78,7 @@
     "eventsource": "2.0.2",
     "graphql": "^16.0.1",
     "graphql-scalars": "1.18.0",
+    "graphql-http": "^1.5.0",
     "puppeteer": "16.2.0",
     "@types/yargs": "17.0.12"
   },
