fix: updated types to work with typescript 4.8

--- a/examples/vercel-function/package.json
+++ b/examples/vercel-function/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@vercel/node": "2.5.11",
     "esbuild": "0.15.5",
-    "typescript": "4.7.4",
-    "tslib": "2.4.0"
+    "tslib": "2.4.0",
+    "typescript": "4.8.2"
   }
 }
