--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,15 +4,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "dependencies": {
-    "@pulumi/pulumi": "3.38.0",
-    "@pulumi/cloudflare": "4.10.0",
-    "@pulumi/azure-native": "1.71.0",
-    "@pulumi/awsx": "0.40.0",
     "@pulumi/aws": "5.13.0",
+    "@pulumi/awsx": "0.40.0",
+    "@pulumi/azure-native": "1.71.0",
+    "@pulumi/cloudflare": "4.10.0",
     "@pulumi/docker": "3.4.1",
+    "@pulumi/pulumi": "3.38.0",
     "@types/node": "16.11.56",
-    "typescript": "4.7.4",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "typescript": "4.8.2"
   },
   "scripts": {
     "start": "ts-node --transpile-only index.ts",
