--- a/examples/aws-lambda-bundle/package.json
+++ b/examples/aws-lambda-bundle/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "esbuild": "0.15.5",
-    "typescript": "4.7.4",
-    "tslib": "2.4.0"
+    "tslib": "2.4.0",
+    "typescript": "4.8.2"
   }
 }
