--- a/examples/azure-function/package.json
+++ b/examples/azure-function/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@azure/functions": "3.2.0",
     "esbuild": "0.15.5",
-    "typescript": "4.7.4",
-    "tslib": "2.4.0"
+    "tslib": "2.4.0",
+    "typescript": "4.8.2"
   }
 }
