--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -15,10 +15,10 @@
     "@prisma/client": "3.15.2",
     "@types/node": "16.11.56",
     "cross-env": "7.0.3",
+    "prisma": "3.15.2",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
-    "typescript": "4.7.4",
-    "prisma": "3.15.2"
+    "typescript": "4.8.2"
   },
   "dependencies": {
     "@graphql-tools/schema": "9.0.2",
