--- a/examples/issue-template/package.json
+++ b/examples/issue-template/package.json
@@ -3,9 +3,9 @@
   "version": "1.13.11",
   "private": true,
   "devDependencies": {
-    "typescript": "4.7.4",
+    "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
-    "ts-node": "10.9.1"
+    "typescript": "4.8.2"
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.13.11",
