--- a/website/package.json
+++ b/website/package.json
@@ -30,11 +30,11 @@
     "@graphql-yoga/node": "2.13.12",
     "@graphql-yoga/render-graphiql": "2.13.11",
     "@monaco-editor/react": "4.4.5",
-    "@theguild/components": "3.0.2",
+    "@theguild/components": "3.0.3",
     "graphql": "16.6.0",
-    "guild-docs": "4.0.1",
+    "guild-docs": "4.1.0",
     "next": "12.2.5",
-    "next-sitemap": "^3.1.21",
+    "next-sitemap": "3.1.21",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
