--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "cross-env": "7.0.3",
     "get-port": "5.1.1",
     "eslint": "^8.21.0",
+    "execa": "5.1.1",
     "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
