--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,7 +5,7 @@
     { "repo": "dotansimha/graphql-yoga" }
   ],
   "commit": false,
-  "linked": [["@graphql-yoga/common", "@graphql-yoga/graphiql"]],
+  "linked": [["@graphql-yoga/graphiql", "@graphql-yoga/common"]],
   "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
