--- a/examples/bun/package.json
+++ b/examples/bun/package.json
@@ -2,7 +2,8 @@
   "name": "example-bun",
   "version": "0.0.0",
   "scripts": {
-    "start": "bun src/index.ts"
+    "start": "bun src/index.ts",
+    "check": "exit 0"
   },
   "dependencies": {
     "bun-types": "^0.1.5",
