--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,5 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.1.0/schema.json",
+  "changelog": [
+    "@changesets/changelog-github",
+    { "repo": "dotansimha/graphql-yoga" }
+  ],
   "commit": false,
   "fixed": [["@graphql-yoga/graphiql", "@graphql-yoga/common"]],
   "access": "public",
