fix(common): do not run `usePreventMutationViaGET` if it is not a Yoga request

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,9 @@ examples/**/node_modules
 !.yarn/sdks
 !.yarn/versions
 
+graphiql-html.ts
+landing-page-html.ts
+graphiqlHTML.ts
+
 *.tsbuildinfo
 coverage/
