--- a/examples/graphql-ws/package.json
+++ b/examples/graphql-ws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-ws",
+  "name": "graphql-ws-example",
   "private": true,
   "version": "0.10.13",
   "scripts": {
@@ -9,7 +9,7 @@
   "dependencies": {
     "@graphql-yoga/node": "2.13.13",
     "graphql": "16.6.0",
-    "graphql-ws": "0.10.13",
+    "graphql-ws": "5.10.1",
     "ws": "8.8.1"
   },
   "devDependencies": {
