--- a/website/package.json
+++ b/website/package.json
@@ -7,15 +7,14 @@
     "build": "next build",
     "algolia-sync": "node scripts/algolia-ci.mjs",
     "postbuild": "next-sitemap --config next-sitemap.config.cjs && node scripts/sitemap-ci.mjs",
-    "dev": "next dev",
-    "next": "next",
+    "dev": "next",
     "start": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "check": "exit 0"
   },
   "devDependencies": {
-    "@guild-docs/algolia": "0.2.2",
     "@next/bundle-analyzer": "^12.2.5",
+    "@theguild/algolia": "0.0.1-alpha-20220913150646-e33a140",
     "@theguild/tailwind-config": "0.0.2",
     "@types/node": "18.7.2",
     "@types/react": "18.0.20",
@@ -30,9 +29,9 @@
     "@graphql-yoga/node": "2.13.13",
     "@graphql-yoga/render-graphiql": "2.13.12",
     "@monaco-editor/react": "4.4.5",
-    "@theguild/components": "3.0.3",
+    "@theguild/components": "4.0.0-alpha-20220913150646-e33a140",
+    "critters": "^0.0.16",
     "graphql": "16.6.0",
-    "guild-docs": "4.1.0",
     "next": "12.3.0",
     "next-sitemap": "3.1.22",
     "react": "18.2.0",
