--- a/examples/error-handling/tsconfig.json
+++ b/examples/error-handling/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "sourceMap": true,
-    "lib": ["esnext"]
+    "lib": ["esnext"],
+    "esModuleInterop": true
   }
 }
