--- a/website/package.json
+++ b/website/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.5",
-    "@theguild/algolia": "0.0.1-alpha-20220916224414-5e4db7b",
+    "@theguild/algolia": "0.0.1",
     "@theguild/tailwind-config": "0.1.0",
     "@types/node": "18.7.2",
     "@types/react": "18.0.20",
@@ -29,7 +29,7 @@
     "@graphql-yoga/node": "2.13.13",
     "@graphql-yoga/render-graphiql": "2.13.12",
     "@monaco-editor/react": "4.4.5",
-    "@theguild/components": "4.0.0-alpha-20220916224414-5e4db7b",
+    "@theguild/components": "4.0.1",
     "critters": "^0.0.16",
     "graphql": "16.6.0",
     "next": "12.3.0",
