--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,7 @@
   "commit": false,
   "fixed": [["@graphql-yoga/graphiql", "@graphql-yoga/common"]],
   "access": "public",
-  "baseBranch": "master",
+  "baseBranch": "v2",
   "updateInternalDependencies": "patch",
   "ignore": ["website", "*-example"],
   "snapshot": {
