--- a/renovate.json
+++ b/renovate.json
@@ -18,5 +18,5 @@
     "**/__fixtures__/**",
     "examples/defer-stream/**"
   ],
-  "baseBranches": ["master", "v3"]
+  "baseBranches": ["v2", "v3"]
 }
