--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'website/**'
     branches:
-      - master
+      - v2
 jobs:
   algolia-records-check:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Fetch
-        run: git fetch origin master
+        run: git fetch origin v2
       - name: Setup env
         uses: the-guild-org/shared-config/setup@main
         with:
