--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'website/**'
     branches:
-      - master
+      - v2
 jobs:
   website-check:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Fetch
-        run: git fetch origin master
+        run: git fetch origin v2
       - name: Use Node 18
         uses: actions/setup-node@master
         with:
