--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -3,10 +3,10 @@ name: website
 on:
   push:
     branches:
-      - master
+      - v2
   pull_request:
     branches:
-      - master
+      - v2
 
 jobs:
   deployment:
@@ -27,8 +27,8 @@ jobs:
       - uses: the-guild-org/shared-config/website-cf@main
         name: build and deploy website
         env:
-          NEXT_BASE_PATH: ${{ github.ref == 'refs/heads/master' && '/graphql/yoga-server' || '' }}
-          SITE_URL: ${{ github.ref == 'refs/heads/master' && 'https://the-guild.dev/graphql/yoga-server' || '' }}
+          NEXT_BASE_PATH: ${{ github.ref == 'refs/heads/v2' && '/graphql/yoga-server' || '' }}
+          SITE_URL: ${{ github.ref == 'refs/heads/v2' && 'https://the-guild.dev/graphql/yoga-server' || '' }}
           NEXT_PUBLIC_ALGOLIA_INDEX_NAME: ${{ secrets.NEXT_PUBLIC_ALGOLIA_INDEX_NAME }}
           NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY: ${{ secrets.NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY }}
           NEXT_PUBLIC_ALGOLIA_APP_ID: ${{ secrets.NEXT_PUBLIC_ALGOLIA_APP_ID }}
