Remove old master references

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,7 @@
   "commit": false,
   "linked": [],
   "access": "public",
-  "baseBranch": "master",
+  "baseBranch": "v3",
   "updateInternalDependencies": "patch",
   "ignore": ["website", "example-*"],
   "snapshot": {
