Add version to Deno example

--- a/examples/deno/package.json
+++ b/examples/deno/package.json
@@ -1,5 +1,9 @@
 {
   "name": "example-deno",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "version": "0.0.0",
+  "scripts": {
+    "check": "exit 0"
+  }
 }
