Exit Prerelease Mode before releasing the canaries

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,7 @@ jobs:
       npmTag: alpha
       buildScript: build
       nodeVersion: 18
+      exitPre: true
     secrets:
       githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NODE_AUTH_TOKEN }}
