--- a/examples/apollo-federation/gateway/package.json
+++ b/examples/apollo-federation/gateway/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@apollo/gateway": "^0.52.0",
-    "@envelop/apollo-federation": "^2.5.0",
+    "@envelop/apollo-federation": "3.0.0-alpha-20220916183245-c7c892d8",
     "graphql-yoga": "2.13.11",
     "graphql": "^16.5.0"
   }
