--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -7,7 +7,7 @@
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "@envelop/graphql-modules": "3.6.0",
+    "@envelop/graphql-modules": "4.0.0-alpha-20220916183245-c7c892d8",
     "@graphql-tools/load-files": "6.6.1",
     "graphql-yoga": "2.13.11",
     "fastify": "4.6.0",
