--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -67,8 +67,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "3.6.0",
-    "@envelop/live-query": "4.2.0",
+    "@envelop/disable-introspection": "4.0.0-alpha-20220916183245-c7c892d8",
+    "@envelop/live-query": "5.0.0-alpha-20220916183245-c7c892d8",
     "@types/eventsource": "1.1.9",
     "@types/node": "16.11.59",
     "eventsource": "2.0.2",
