--- a/examples/generic-auth/package.json
+++ b/examples/generic-auth/package.json
@@ -19,7 +19,7 @@
     "typescript": "4.8.3"
   },
   "dependencies": {
-    "@envelop/generic-auth": "4.5.0",
+    "@envelop/generic-auth": "5.0.0-alpha-20220916183245-c7c892d8",
     "graphql-yoga": "2.13.11",
     "graphql": "16.6.0"
   }
