--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -13,7 +13,7 @@
     "typescript": "4.8.3"
   },
   "dependencies": {
-    "@envelop/live-query": "4.2.0",
+    "@envelop/live-query": "5.0.0-alpha-20220916183245-c7c892d8",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
     "graphql-yoga": "2.13.11",
     "graphql": "16.6.0"
