--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -35,7 +35,7 @@
 		"vite": "3.1.3"
 	},
 	"dependencies": {
-		"@envelop/graphql-jit": "4.6.0",
+		"@envelop/graphql-jit": "5.0.0-alpha-20220916183245-c7c892d8",
 		"graphql-yoga": "2.13.11",
 		"graphql": "16.6.0"
 	},
