--- a/packages/plugins/response-cache/package.json
+++ b/packages/plugins/response-cache/package.json
@@ -49,7 +49,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@envelop/response-cache": "^3.1.0"
+    "@envelop/response-cache": "4.0.0-alpha-20220916183245-c7c892d8"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0",
