--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
     "@vitejs/plugin-react": "1.3.2",
     "vite": "2.9.15"
   },
