Give another try

--- a/examples/bun/package.json
+++ b/examples/bun/package.json
@@ -1,6 +1,7 @@
 {
   "name": "example-bun",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "bun src/index.ts",
     "check": "exit 0"
