--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "graphql-yoga": "2.13.11",
-    "@whatwg-node/fetch": "^0.4.2",
+    "@whatwg-node/fetch": "0.4.3",
     "graphql": "^16.1.0"
   },
   "devDependencies": {
