Use CustomEvent for PubSub and TypedEventTarget impl

--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@graphql-yoga/typed-event-target": "^0.1.1",
+    "@whatwg-node/events": "0.0.1",
     "@repeaterjs/repeater": "^3.0.4",
     "tslib": "^2.3.1"
   },
