--- a/packages/event-target/redis-event-target/package.json
+++ b/packages/event-target/redis-event-target/package.json
@@ -19,6 +19,7 @@
   "author": "Laurin Quast <laurinquast@googlemail.com>",
   "license": "MIT",
   "dependencies": {
+    "@whatwg-node/events": "0.0.1",
     "@graphql-yoga/typed-event-target": "^0.1.1"
   },
   "peerDependencies": {
@@ -26,7 +27,6 @@
   },
   "devDependencies": {
     "@types/ioredis-mock": "5.6.0",
-    "event-target-polyfill": "0.0.3",
     "ioredis": "5.2.3",
     "ioredis-mock": "8.2.2"
   },
