--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -28,15 +28,15 @@
     "vite": "3.1.3"
   },
   "dependencies": {
+    "@graphiql/plugin-explorer": "^0.1.4",
+    "@graphiql/toolkit": "^0.8.0",
     "@graphql-tools/url-loader": "7.16.2",
-    "copy-to-clipboard": "3.3.2",
-    "graphiql": "1.8.8",
-    "graphiql-explorer": "0.9.0",
+    "graphiql": "2.0.7",
     "graphql": "16.6.0",
+    "json-bigint-patch": "0.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "use-url-search-params": "2.5.1",
-    "json-bigint-patch": "0.0.8"
+    "use-url-search-params": "2.5.1"
   },
   "main": "dist/yoga-graphiql.umd.js",
   "module": "dist/yoga-graphiql.es.js",
