--- a/packages/plugins/sofa/package.json
+++ b/packages/plugins/sofa/package.json
@@ -49,11 +49,11 @@
     "access": "public"
   },
   "dependencies": {
-    "sofa-api": "0.12.0-alpha.0"
+    "sofa-api": "0.12.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0",
-    "graphql-yoga": "^2.13.11"
+    "graphql-yoga": "^3.0.0-next.0"
   },
   "type": "module"
 }
