:boom: UPDATE: kit version

--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -3,10 +3,10 @@
 	"version": "0.12.3",
 	"private": true,
 	"scripts": {
-		"prepare": "svelte-kit sync",
-		"dev": "yarn prepare && vite dev",
+		"sync": "svelte-kit sync",
+		"dev": "yarn sync && vite dev",
 		"test": "jest",
-		"build": "yarn prepare && vite build",
+		"build": "yarn sync && vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview --port 3007",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
@@ -16,7 +16,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.80",
-		"@sveltejs/kit": "1.0.0-next.370",
+		"@sveltejs/kit": "1.0.0-next.499",
 		"@types/jest": "^29.0.0",
 		"@typescript-eslint/eslint-plugin": "5.38.0",
 		"@typescript-eslint/parser": "5.38.0",
