--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "prebuild": "rimraf packages/*/dist",
     "check": "yarn workspaces run check",
     "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace graphql-yoga run generate-graphiql-html && bob build",
-    "test": "jest --detectOpenHandles",
-    "test:integration": "cross-env INTEGRATION_TEST=true jest --passWithNoTests --forceExit",
+    "test": "jest --detectOpenHandles --detectLeaks",
+    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectOpenHandles --detectLeaks",
     "release": "yarn build && changeset publish",
     "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
