--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "check": "yarn workspaces run check",
     "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --detectOpenHandles --detectLeaks",
-    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectOpenHandles --detectLeaks",
+    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --forceExit",
     "release": "yarn build && changeset publish",
     "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
