--- a/examples/bun/package.json
+++ b/examples/bun/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "bun src/index.ts",
-    "check": "exit 0"
+    "check": "bun wiptest"
   },
   "dependencies": {
     "bun-types": "^0.1.5",
