--- a/examples/bun/tsconfig.json
+++ b/examples/bun/tsconfig.json
@@ -8,5 +8,5 @@
     // "bun-types" is the important part
     "types": ["bun-types"]
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts", "__integration-tests__/bun.spec.ts"]
 }
