--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@graphql-tools/code-file-loader": "^7.3.0",
     "@graphql-tools/mock": "^8.7.0",
+    "@graphql-tools/utils": "8.12.0",
     "@envelop/core": "^2.5.0",
     "@envelop/parser-cache": "^4.6.0",
     "@envelop/validation-cache": "^4.6.0",
