--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         run: yarn build
 
       - name: Run Tests
-        run: yarn test:integration
+        run: yarn test:integration --ci
 
   test-esm:
     name: esm
