--- a/package.json
+++ b/package.json
@@ -92,6 +92,9 @@
     "weak-napi": "2.0.2"
   },
   "resolutions": {
-    "graphql": "16.6.0"
+    "graphql": "16.6.0",
+    "@whatwg-node/server": "0.4.10-alpha-20220927125913-2297df6",
+    "@whatwg-node/fetch": "0.4.6-alpha-20220927125913-2297df6",
+    "undici": "5.10.0"
   }
 }
