--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "packages/**/src/**/*.{ts,tsx}": [
       "eslint --fix"
     ],
-    "**/*.{ts,tsx,graphql,yml,md,mdx,json}": [
+    "**/*.{ts,tsx,graphql,yml,md,mdx,json,html}": [
       "prettier --write"
     ]
   },
