--- a/packages/plugins/apq/package.json
+++ b/packages/plugins/apq/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@whatwg-node/fetch": "0.4.6-alpha-20220927155758-f3d5f11",
+    "@whatwg-node/fetch": "0.4.6",
     "tiny-lru": "^9.0.0"
   },
   "peerDependencies": {
