--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "graphql-yoga": "3.0.0-next.1",
-    "@whatwg-node/fetch": "0.4.6-alpha-20220927155758-f3d5f11",
+    "@whatwg-node/fetch": "0.4.6",
     "graphql": "^16.1.0"
   },
   "devDependencies": {
