--- a/packages/plugins/apollo-inline-trace/package.json
+++ b/packages/plugins/apollo-inline-trace/package.json
@@ -44,7 +44,7 @@
     "graphql-yoga": "^3.0.0-next.1"
   },
   "dependencies": {
-    "@whatwg-node/fetch": "0.4.6-alpha-20220927155758-f3d5f11",
+    "@whatwg-node/fetch": "0.4.6",
     "apollo-reporting-protobuf": "^3.3.2"
   }
 }
