--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -15,14 +15,15 @@
     "@prisma/client": "3.15.2",
     "@types/node": "16.11.60",
     "cross-env": "7.0.3",
+    "jest-mock-extended": "^3.0.1",
+    "prisma": "3.15.2",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
-    "typescript": "4.8.3",
-    "prisma": "3.15.2"
+    "typescript": "4.8.3"
   },
   "dependencies": {
-    "graphql-yoga": "3.0.0-next.1",
     "@graphql-tools/schema": "9.0.4",
-    "graphql": "16.6.0"
+    "graphql": "16.6.0",
+    "graphql-yoga": "3.0.0-next.1"
   }
 }
