don't mock prisma

--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "3.15.2",
-    "@types/node": "16.11.60",
+    "@prisma/migrate": "4.3.1",
+    "@prisma/internals": "4.3.1",
+    "@types/node": "16.11.59",
     "cross-env": "7.0.3",
     "jest-mock-extended": "^3.0.1",
     "prisma": "3.15.2",
