--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -15,13 +15,12 @@
     "@prisma/client": "3.15.2",
     "@prisma/migrate": "4.3.1",
     "@prisma/internals": "4.3.1",
-    "@types/node": "16.11.59",
+    "@types/node": "16.11.60",
     "cross-env": "7.0.3",
-    "jest-mock-extended": "^3.0.1",
-    "prisma": "3.15.2",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "prisma": "3.15.2"
   },
   "dependencies": {
     "@graphql-tools/schema": "9.0.4",
