--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -23,8 +23,8 @@
     "prisma": "3.15.2"
   },
   "dependencies": {
+    "graphql-yoga": "3.0.0-next.1",
     "@graphql-tools/schema": "9.0.4",
-    "graphql": "16.6.0",
-    "graphql-yoga": "3.0.0-next.1"
+    "graphql": "16.6.0"
   }
 }
