--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -55,14 +55,15 @@
   "dependencies": {
     "@graphql-tools/code-file-loader": "^7.3.0",
     "@graphql-tools/mock": "^8.7.0",
+    "@graphql-tools/utils": "8.12.0",
     "@envelop/core": "^2.5.0",
     "@envelop/parser-cache": "^4.6.0",
     "@envelop/validation-cache": "^4.6.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
-    "@whatwg-node/fetch": "0.4.5",
-    "@whatwg-node/server": "0.4.7",
+    "@whatwg-node/server": "0.4.10",
+    "@whatwg-node/fetch": "0.4.6",
     "dset": "^3.1.1",
     "graphql-config": "^4.1.0",
     "tslib": "^2.3.1",
