--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "3.15.2",
+    "@prisma/migrate": "4.3.1",
+    "@prisma/internals": "4.3.1",
     "@types/node": "16.11.60",
     "cross-env": "7.0.3",
     "ts-node": "10.9.1",
