--- a/packages/plugins/readiness-check/package.json
+++ b/packages/plugins/readiness-check/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphql-yoga/plugin-readiness-check",
-  "version": "1.0.0-next.2",
+  "version": "1.0.0",
   "description": "Add a readiness check for GraphQL Yoga through a simple plugin",
   "repository": {
     "type": "git",
