--- a/examples/node-ts/package.json
+++ b/examples/node-ts/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "build": "node ./build.js",
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
