update to new components

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,6 +9,12 @@
       "options": {
         "parser": "json"
       }
+    },
+    {
+      "files": "*.md{,x}",
+      "options": {
+        "trailingComma": "none"
+      }
     }
   ]
 }
