--- a/website/package.json
+++ b/website/package.json
@@ -15,10 +15,9 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.5",
     "@theguild/algolia": "0.0.2",
-    "@theguild/tailwind-config": "0.1.0",
-    "@types/node": "18.7.2",
+    "@theguild/tailwind-config": "0.1.1",
+    "@types/node": "18.7.23",
     "@types/react": "18.0.21",
-    "@types/react-dom": "^18.0.6",
     "cross-env": "7.0.3",
     "fast-xml-parser": "^4.0.7",
     "typescript": "4.8.4"
@@ -27,11 +26,11 @@
     "@graphql-inspector/core": "latest",
     "@graphql-inspector/github": "latest",
     "@monaco-editor/react": "4.4.6",
-    "@theguild/components": "4.0.3",
+    "@theguild/components": "4.1.1-alpha-20220929203056-eaaf12c",
     "critters": "^0.0.16",
     "graphql": "16.6.0",
     "next": "12.3.1",
-    "next-sitemap": "3.1.22",
+    "next-sitemap": "3.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
