--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .DS_Store
-node_modules
-dist
-.bob
+node_modules/
+dist/
+.bob/
 examples/**/*.lock
 examples/**/package-lock.json
 examples/**/node_modules
-.idea
+.idea/
 *.log
 # https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
 .yarn/*
