--- a/website/package.json
+++ b/website/package.json
@@ -23,11 +23,7 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@graphql-inspector/core": "latest",
-    "@graphql-inspector/github": "latest",
-    "@monaco-editor/react": "4.4.6",
-    "@theguild/components": "4.1.1-alpha-20220929203056-eaaf12c",
-    "critters": "^0.0.16",
+    "@theguild/components": "4.1.1",
     "graphql": "16.6.0",
     "next": "12.3.1",
     "next-sitemap": "3.1.23",
