Fix integration tests

--- a/examples/cloudflare-advanced/tsconfig.json
+++ b/examples/cloudflare-advanced/tsconfig.json
@@ -10,5 +10,5 @@
     "types": ["@cloudflare/workers-types"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist", "__integration-tests__"]
 }
