--- a/examples/cloudflare-modules/tsconfig.json
+++ b/examples/cloudflare-modules/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": ["esnext"],
     "moduleResolution": "node",
     "sourceMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["@cloudflare/workers-types"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "__integration-tests__"]
