--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "17.0.50",
+    "@types/react-dom": "17.0.17",
     "@vitejs/plugin-react": "1.3.2",
     "vite": "3.1.3"
   },
