--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "jest": "^29.0.0",
     "lint-staged": "^13.0.3",
     "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.2",
     "rimraf": "^3.0.2",
