--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -9,11 +9,6 @@
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "bin": {
-    "gql-yoga": "dist/cjs/cli/bin.js",
-    "graphql-yoga": "dist/cjs/cli/bin.js",
-    "yoga": "dist/cjs/cli/bin.js"
-  },
   "scripts": {
     "prepack": "bob prepack",
     "generate-graphiql-html": "node scripts/generate-graphiql-html.js",
@@ -53,8 +48,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@graphql-tools/code-file-loader": "^7.3.0",
-    "@graphql-tools/mock": "^8.7.0",
     "@graphql-tools/utils": "8.12.0",
     "@envelop/core": "^2.5.0",
     "@envelop/parser-cache": "^4.6.0",
@@ -65,9 +58,7 @@
     "@whatwg-node/server": "0.4.11",
     "@whatwg-node/fetch": "0.4.7",
     "dset": "^3.1.1",
-    "graphql-config": "^4.1.0",
-    "tslib": "^2.3.1",
-    "yargs": "^17.3.0"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "16.11.64",
@@ -77,8 +68,7 @@
     "graphql": "^16.0.1",
     "graphql-scalars": "1.18.0",
     "graphql-http": "^1.6.0",
-    "puppeteer": "18.2.1",
-    "@types/yargs": "17.0.13"
+    "puppeteer": "18.2.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
