--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,41 @@ jobs:
       - name: Run Tests
         run: pnpm test:integration --ci
 
+  leaks:
+    name: leaks / nodejs v${{ matrix.node-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18]
+      fail-fast: false
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Use Node ${{ matrix.node-version }}
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        id: node-modules-cache-test-node
+        with:
+          path: '**/node_modules'
+          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
+          restore-keys: |
+            ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
+      - name: Install Dependencies using Yarn
+        run: yarn install --ignore-engines --frozen-lockfile --immutable
+        if: steps.node-modules-cache-test-node.outputs.cache-hit != 'true'
+
+      - name: Build Packages
+        run: yarn build
+
+      - name: Run Tests
+        run: yarn test:leaks --ci
+
   esm:
     runs-on: ubuntu-latest
     steps:
