--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -7,7 +7,7 @@
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "@envelop/graphql-modules": "4.0.0-alpha-20220928142730-aa29e80b",
+    "@envelop/graphql-modules": "4.0.0",
     "@graphql-tools/load-files": "6.6.1",
     "graphql-yoga": "3.0.0-next.4",
     "fastify": "4.7.0",
