--- a/examples/apollo-federation/gateway/package.json
+++ b/examples/apollo-federation/gateway/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@apollo/gateway": "^0.52.0",
-    "@envelop/apollo-federation": "3.0.0-alpha-20220928142730-aa29e80b",
+    "@envelop/apollo-federation": "3.0.0",
     "graphql-yoga": "3.0.0-next.4",
     "graphql": "^16.5.0"
   }
