--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -13,7 +13,7 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@envelop/live-query": "5.0.0-alpha-20220928142730-aa29e80b",
+    "@envelop/live-query": "5.0.0",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
     "graphql-yoga": "3.0.0-next.4",
     "graphql": "16.6.0"
