--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -35,7 +35,7 @@
 		"vite": "3.1.6"
 	},
 	"dependencies": {
-		"@envelop/graphql-jit": "5.0.0-alpha-20220928142730-aa29e80b",
+		"@envelop/graphql-jit": "5.0.0",
 		"graphql-yoga": "3.0.0-next.4",
 		"graphql": "16.6.0"
 	},
