--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -67,8 +67,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "4.0.0-alpha-20220928142730-aa29e80b",
-    "@envelop/live-query": "5.0.0-alpha-20220928142730-aa29e80b",
+    "@envelop/disable-introspection": "4.0.0",
+    "@envelop/live-query": "5.0.0",
     "@types/eventsource": "1.1.9",
     "@types/node": "16.11.63",
     "graphql": "^16.6.0",
