--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -50,10 +50,10 @@
   "dependencies": {
     "@graphql-tools/code-file-loader": "^7.3.0",
     "@graphql-tools/mock": "^8.7.0",
-    "@envelop/core": "3.0.0",
-    "@envelop/types": "2.4.1-alpha-20220928142730-aa29e80b",
-    "@envelop/parser-cache": "5.0.0",
-    "@envelop/validation-cache": "5.0.0",
+    "@envelop/core": "3.0.1",
+    "@envelop/types": "3.0.0",
+    "@envelop/parser-cache": "5.0.1",
+    "@envelop/validation-cache": "5.0.1",
     "@graphql-tools/utils": "8.12.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^9.0.0",
@@ -66,8 +66,8 @@
   "devDependencies": {
     "@types/node": "16.11.64",
     "html-minifier-terser": "7.0.0",
-    "@envelop/disable-introspection": "4.0.0",
-    "@envelop/live-query": "5.0.0",
+    "@envelop/disable-introspection": "4.0.1",
+    "@envelop/live-query": "5.0.1",
     "eventsource": "2.0.2",
     "graphql": "^16.0.1",
     "graphql-scalars": "1.18.0",
