--- a/website/package.json
+++ b/website/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "@theguild/components": "4.2.4",
+    "clsx": "1.2.1",
     "graphql": "16.6.0",
     "next": "12.3.1",
     "next-sitemap": "3.1.24",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   }
 }
