--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "weak-napi": "2.0.2"
   },
   "resolutions": {
-    "graphql": "16.6.0",
-    "@envelop/core": "3.0.1"
+    "graphql": "16.6.0"
   }
 }
