--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "weak-napi": "2.0.2"
   },
   "resolutions": {
-    "graphql": "16.6.0"
+    "graphql": "16.6.0",
+    "@envelop/core": "3.0.2"
   }
 }
