Upgrade to envelop v3 (#1660)
* update envelop

* bring error formatter here

* feat: create a wrapped schema

* changeset for now

* useOnResolver envelop plugin proposal

* run canary for v3

* do not run deps

* fix version

* plz

* remove

* update envelop

* error masking works

* plz build

* update to new envelop

* Fix tests

* works

* update

* resolve to envelop v3

* deno resolve import to envelop/core 3

* code review

* update guide

* unnecessary cast

* use own isGraphQL

* dev is when not prod

* use http validation context generic

* use yoga types

* plugins need to inherit the context

* patch envelop core

* patch envelop response-cache

* partial yoga masked error opts

* appearantly dev env is when dev env

* remove unused

* remove more

* relative imports need .js

* Go

* Go

Co-authored-by: enisdenjo <badurinadenis@gmail.com>
Co-authored-by: Arda TANRIKULU <ardatanrikulu@gmail.com>

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -66,6 +66,15 @@
     "graphql-yoga": "3.0.0-next.4",
     "tslib": "^2.3.1"
   },
+  "devDependencies": {
+    "@envelop/disable-introspection": "4.0.1",
+    "@envelop/live-query": "5.0.1",
+    "@types/eventsource": "1.1.9",
+    "@types/node": "16.11.63",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "1.18.0",
+    "puppeteer": "18.0.5"
+  },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
   },
