--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -49,9 +49,9 @@
   },
   "dependencies": {
     "@graphql-tools/utils": "8.12.0",
-    "@envelop/core": "^2.5.0",
-    "@envelop/parser-cache": "^4.6.0",
-    "@envelop/validation-cache": "^4.6.0",
+    "@envelop/core": "3.0.2",
+    "@envelop/parser-cache": "5.0.1",
+    "@envelop/validation-cache": "5.0.1",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
@@ -63,8 +63,8 @@
   "devDependencies": {
     "@types/node": "16.11.64",
     "html-minifier-terser": "7.0.0",
-    "@envelop/disable-introspection": "^3.5.0",
-    "@envelop/live-query": "^4.1.0",
+    "@envelop/disable-introspection": "4.0.1",
+    "@envelop/live-query": "5.0.1",
     "graphql": "^16.0.1",
     "graphql-scalars": "1.18.0",
     "graphql-http": "^1.6.0",
