guild eslint config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "release": "yarn build && changeset publish",
     "start:docs": "yarn workspace website dev",
     "postinstall": "patch-package && husky install",
-    "fix-bin": "node scripts/fix-bin.js",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
@@ -66,6 +65,7 @@
     "@babel/preset-typescript": "7.18.6",
     "@changesets/changelog-github": "0.4.7",
     "@changesets/cli": "2.24.4",
+    "@theguild/eslint-config": "0.2.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^29.0.0",
