--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -48,26 +48,26 @@
     "access": "public"
   },
   "dependencies": {
-    "@graphql-tools/utils": "8.12.0",
     "@envelop/core": "3.0.2",
     "@envelop/parser-cache": "5.0.1",
     "@envelop/validation-cache": "5.0.1",
-    "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^9.0.0",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
-    "@whatwg-node/server": "0.4.11",
     "@whatwg-node/fetch": "0.4.7",
+    "@whatwg-node/server": "0.4.11",
     "dset": "^3.1.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "16.11.64",
-    "html-minifier-terser": "7.0.0",
     "@envelop/disable-introspection": "4.0.1",
     "@envelop/live-query": "5.0.1",
+    "@graphql-tools/utils": "^8.12.0",
+    "@types/node": "16.11.64",
     "graphql": "^16.0.1",
-    "graphql-scalars": "1.18.0",
     "graphql-http": "^1.6.0",
+    "graphql-scalars": "1.18.0",
+    "html-minifier-terser": "7.0.0",
     "puppeteer": "18.2.1"
   },
   "peerDependencies": {
