--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -19,13 +19,13 @@ jobs:
           nodeVersion: 18
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Typecheck
-        run: yarn workspace website build
+        run: pnpm workspace website build
 
       - name: Algolia push
-        run: yarn workspace website algolia-sync
+        run: pnpm workspace website algolia-sync
         env:
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
           ALGOLIA_ADMIN_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
@@ -33,7 +33,7 @@ jobs:
           SITE_URL: https://www.graphql-yoga.com/
 
       - name: Format
-        run: yarn prettier
+        run: pnpm prettier
 
       - name: Compare
         run: git diff website/algolia-lockfile.json
