--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     name: unit / nodejs v${{ matrix.node-version }}
     uses: the-guild-org/shared-config/.github/workflows/ci-node-matrix.yml@main
     with:
-      script: 'yarn build && yarn test'
+      script: 'pnpm build && pnpm test'
       nodeVersions: '[14,16,18]'
 
   integration:
@@ -33,25 +33,25 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: 'pnpm'
 
       - name: Cache Node Modules
         uses: actions/cache@v3
         id: node-modules-cache-test-node
         with:
           path: '**/node_modules'
-          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
+          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('pnpm-lock.yaml')}}-${{hashFiles('patches/**/*')}}
           restore-keys: |
-            ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
-      - name: Install Dependencies using Yarn
-        run: yarn install --ignore-engines --frozen-lockfile --immutable
+            ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('pnpm-lock.yaml')}}-${{hashFiles('patches/**/*')}}
+      - name: Install Dependencies using pnpm
+        run: pnpm install --ignore-engines --frozen-lockfile --immutable
         if: steps.node-modules-cache-test-node.outputs.cache-hit != 'true'
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Run Tests
-        run: yarn test:integration --ci
+        run: pnpm test:integration --ci
 
   esm:
     runs-on: ubuntu-latest
@@ -65,10 +65,10 @@ jobs:
           nodeVersion: 18
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Run Tests
-        run: yarn workspace example-node-esm run test
+        run: pnpm workspace example-node-esm run test
 
   typecheck:
     runs-on: ubuntu-latest
@@ -90,13 +90,13 @@ jobs:
           deno-version: v1.x
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Typecheck
-        run: yarn run check
+        run: pnpm run check
 
       - name: Test ESM & CJS exports integrity
-        run: yarn bob check
+        run: pnpm bob check
 
       - name: Prettier
-        run: yarn prettier:check
+        run: pnpm prettier:check
