--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -22,7 +22,7 @@ jobs:
         name: setup env
         with:
           nodeVersion: 18
-          packageManager: yarn
+          packageManager: pnpm
 
       - uses: the-guild-org/shared-config/website-cf@main
         name: build and deploy website
@@ -40,5 +40,5 @@ jobs:
           prId: ${{ github.event.pull_request.number }}
           mainBranch: master
           websiteDirectory: ./
-          buildScript: yarn build && cd website && yarn build && yarn next export
+          buildScript: pnpm build && cd website && pnpm build && pnpm next export
           artifactDir: website/out
