--- a/examples/netlify-edge/package.json
+++ b/examples/netlify-edge/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "yarn build && netlify dev",
+    "start": "pnpm build && netlify dev",
     "build": "node ./build.js",
     "check": "exit 0"
   },
