--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"scripts": {
 		"sync": "svelte-kit sync",
-		"dev": "yarn sync && vite dev",
+		"dev": "pnpm sync && vite dev",
 		"test": "jest",
-		"build": "yarn sync && vite build",
+		"build": "pnpm sync && vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview --port 3007",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
