--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "graphql-yoga-monorepo",
   "private": true,
   "scripts": {
+    "preinstall": "node scripts/align-workspaces.js",
     "prebuild": "rimraf packages/*/dist",
-    "check": "yarn workspaces run check",
-    "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace graphql-yoga run generate-graphiql-html && bob build",
+    "check": "pnpm workspaces run check",
+    "build": "pnpm workspace @graphql-yoga/graphiql run build && pnpm workspace @graphql-yoga/render-graphiql run build && pnpm workspace graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --detectOpenHandles --detectLeaks",
     "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
-    "release": "yarn build && changeset publish",
-    "start:docs": "yarn workspace website dev",
+    "release": "pnpm build && changeset publish",
+    "start:docs": "pnpm workspace website dev",
     "postinstall": "patch-package && husky install",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
-    "build-website": "yarn build && cd website && yarn build",
+    "build-website": "pnpm build && cd website && pnpm build",
     "denoify": "denoify"
   },
   "lint-staged": {
