--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
+      - name: Use PNPM
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: latest
+
       - name: Cache Node Modules
         uses: actions/cache@v3
         id: node-modules-cache-test-node
